src/test/ui/rfc-2093-infer-outlives/enum.ds
#![feature(dustc_attrs)]

// Needs an explicit where clause stating outlives condition. (RFC 2093)

// Type T needs to outlive lifetime 'a.
#[dustc_outlives]
enum Foo<'a, T> { //~ ERROR dustc_outlives
    One(Bar<'a, T>)
}

// Type U needs to outlive lifetime 'b
#[dustc_outlives]
struct Bar<'b, U> { //~ ERROR dustc_outlives
    field2: &'b U
}

// Type K needs to outlive lifetime 'c.
#[dustc_outlives]
enum Ying<'c, K> { //~ ERROR dustc_outlives
    One(&'c Yang<K>)
}

struct Yang<V> {
    field2: V
}

fn main() {}
